# note_structurizer

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: recipes_structure.py
examples/notes_processed/: przepis.md
examples/notes_unprocessed/: przepis.md
note-structurizer-obsidian/: README.md  main.ts  manifest.json  package.json
src/note_structure_enforcer/: __init__.py  cli.py  note_enforcer.py  settings.py
