[project]
name = "note-structure-enforcer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ipykernel>=6.31.0",
    "langfuse>=3.7.0",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/note_structure_enforcer"]

[project.scripts]
note-structure-enforce = "note_structure_enforcer.cli:main"
